[package]
name = "redis-lock"
version = "0.1.2"
edition = "2021"
description = "Rusty distributed locking backed by Redis."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/redis-lock"
documentation = "https://docs.rs/redis-lock/"
readme = "./README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
sync = []

[dependencies]
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
uuid = { version = "1.11.0", features=["v4"] }
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
serial_test = "3.1.1"

[lints.rust]
# TODO Remove this allow. I'm pretty sure this can only be fixed with a change to the `redis` crate.
dependency_on_unit_never_type_fallback = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
module_name_repetitions = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
blanket_clippy_restriction_lints = "allow"
single_call_fn = "allow"
implicit_return = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
exhaustive_enums = "allow"
std_instead_of_core = "allow"
pattern_type_mismatch = "allow"
wildcard_enum_match_arm = "allow"
std_instead_of_alloc = "allow"
unseparated_literal_suffix = "allow"
pub_underscore_fields = "allow"
exhaustive_structs = "allow"
missing_trait_methods = "allow"
bool_assert_comparison = "allow"
unneeded_field_pattern = "allow"
single_char_lifetime_names = "allow"
min_ident_chars = "allow"

[[bin]]
name = "one"
path = "src/bin/one.rs"
required-features = ["sync"]

[[bin]]
name = "two"
path = "src/bin/two.rs"
required-features = ["sync"]